traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:6: error: '(' expected but identifier found.
      if i<(diag+1) {
         ^